--- a/index.html
+++ b/index.html
@@ -1,284 +1,213 @@
 <html>
 
 <head>
-<title>denis yarats home page</title>
+<title>Denis Yarats</title>
 <style type="text/css" media="screen">
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
-blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em,
-font, img, ins, kbd, q, s, samp, small, strike, strong, sub, tt, var, dl, dt,
-dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot,
-thead, tr, th, td {
-  border: 0pt none;
-  font-family: inherit;
-  font-size: 100%;
-  font-style: inherit;
-  font-weight: inherit;
-  margin: 0pt;
-  outline-color: invert;
-  outline-style: none;
-  outline-width: 0pt;
-  padding: 0pt;
-  vertical-align: baseline;
-}
-
-a {
-  color: #1772d0;
-  text-decoration:none;
-}
-
-a:focus, a:hover {
-  color: #f09228;
-  text-decoration:none;
-}
-
-a.paper {
-  font-weight: bold;
-  font-size: 14pt;
-}
-
-b.paper {
-  font-weight: bold;
-  font-size: 12pt;
-}
-
-* {
-  margin: 0pt;
-  padding: 0pt;
-}
-
 body {
-  position: relative;
-  margin: 3em auto 2em auto;
-  width: 800px;
-  font-family: Verdana, Helvetica, sans-serif;
-  font-size: 14px;
-  background: #fff;
+    position: relative;
+    margin: 10px auto;
+    width: 840px;
+    background: #fff;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 h2 {
-  font-family: Verdana, Helvetica, sans-serif;
-  font-size: 15pt;
-  font-weight: 700;
-}
-
-h4 {
-  font-family: Verdana, Helvetica, sans-serif;
-  font-size: 13pt;
-  font-weight: 700;
+  margin-top: 0px;
 }
 
 h3 {
-  font-family: Verdana, Helvetica, sans-serif;
-  font-size: 16px;
-  font-weight: 700;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-strong {
-  font-family: Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+body {
+  color: #000000;
+  background: #FFFFFF;
 }
 
-ul {
-  list-style: circle;
+p {
+  margin: 5px 0;
+  text-align: justify;
 }
 
-img {
-  border: none;
+p.info {
+  padding-left: 40px;
 }
 
-li {
-  padding-bottom: 0.5em;
-  margin-left: 1.4em;
+a:link {
+  color: #264889;
 }
 
-strong, b {
-	font-weight:bold;
+a:hover, a:active, a:visited:hover {
+  color: #4267b2;
+  text-decoration: none;
 }
 
-em, i {
-	font-style:italic;
+a:visited {
+  color: #264844;
 }
 
-div.section {
-  clear: both;
-  margin-bottom: 1.5em;
-  background: #ccc;
+.block {
+  margin: 0 0 20px 0;
 }
 
-div.spanner {
-  clear: both;
+.inner-block {
+  padding: 5px;
+  float: left;
 }
 
-div.paper {
-  clear: both;
-  margin-top: 0.3em;
-  margin-bottom: 0.3em;
-  border: 1px solid #ddd;
-  background: #fff;
-  padding: 1em 1em 1em 1em;
+.pub-block {
+  margin: 0 0 20px 0;
 }
 
-div.paper div {
-  padding-right: 230px;
-}
-
-div.paper div.wide {
-  padding-right: 0px;
-}
-
-img.paper {
-  margin-bottom: 0.5em;
+.pub-img {
+  position: relative;
+  width: 150;
   float: right;
+  margin-left: -160;
+  border: 1px solid;
+}
+
+.pub-img img {
   width: 150px;
+  height: auto;
 }
 
-span.blurb {
-  font-style:italic;
-  display:block;
-  margin-top:0.75em;
-  margin-bottom:0.5em;
+.pub-text {
+  padding-right: 170px;
+  float: right;
 }
 
-pre, code {
-  font-family: 'Lucida Console', 'Andale Mono', 'Courier', monospaced;
-  margin: 1em 0;
-  padding: 0;
+.clr {
+  clear: both;
 }
-
-div.paper pre {
-  font-size: 0.9em;
-}
-
 </style>
 
-<script type="text/javascript" src="javascript/hidebib.js"></script>
-
 <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic"
- rel="stylesheet" type="text/css" />
+rel="stylesheet" type="text/css" />
+
 </head>
 
 <body>
 
-<div style="margin-bottom: 1em; border: 1px solid #ddd; background-color: #fff; padding: 1em; height: 200px;">
-  <div style="margin: 0 auto; width: 100%; line-height: 130%;">
-    <img title="photo" style="float: left; padding-right: .5em; height: 200px;" src="images/photo.jpg" />
-    <div style="vertical-align: top; height: 250px;">
-      <span style="font-size: 20pt; line-height: 130%;">Denis Yarats</span><br />
-      <br />
-      <span>Research Engineer</span><br />
-      <a href="https://research.fb.com/category/facebook-ai-research-fair" target="_blank">Facebook AI Research (FAIR)</a>
-      <br />
-      <br />
-      <a href="https://scholar.google.com/citations?user=7kaXqgMAAAAJ&hl=en&pagesize=1000&sortby=pubdate" target="_blank">Google Scholar</a> /
-      <a href="https://github.com/1nadequacy" target="_blank">GitHub</a> /
-      <a href="data/denis_yarats_cv.pdf" target="_blank">CV</a>
+<div class="block">
+  <div class="inner-block">
+    <img title="Denis Yarats" style="width: 250px; height: auto;" src="images/photo.jpg" />
+  </div>
+  <div class="inner-block">
+    <h1>Denis Yarats</h1>
+    <br/>
+    <p>I am a Research Engineer at <a href="https://research.fb.com/category/facebook-ai-research-fair" target="_blank">Facebook AI Research (FAIR).</a> </p>
+    <p>
+      <a href="https://scholar.google.com/citations?user=7kaXqgMAAAAJ&hl=en&pagesize=1000&sortby=pubdate" target="_blank">[Google Scholar]</a>
+      <a href="https://github.com/1nadequacy" target="_blank">[GitHub]</a>
+      <a href="data/denis_yarats_cv.pdf" target="_blank">[CV]</a>
+      [denisyarats at gmail com]
+    </p>
+  </div>
+  <div class="clr"></div>
+</div>
+
+<div class="block">
+  <div class="inner-block">
+    <h2>Research</h2>
+    <p>My research interest is to develop intelligent agents that can communicate with people and perform useful tasks, with the ultimate ambition to liberate people from the burden of mundane routines. I want to advance the areas of NLP and RL through my research, as they allow the emergence of agents that can evolve over time through their interaction, which is an essential trait of intelligence.</p>
+  </div>
+  <div class="clr"></div>
+</div>
+
+<div class="block">
+  <div class="inner-block">
+    <h2>Publications</h2>
+    <div class="pub-block">
+      <div class="pub-img">
+        <img title="Deal or No Deal? End-to-End Learning for Negotiation Dialogues" src="images/hiergen.png" />
+      </div>
+      <div class="pub-text">
+        <div class="paper" id="yarats2017hiergen">
+          <h3>Hierarchial Text Generation and Planning for Strategic Dialogue.</h3>
+          <p><strong>Denis Yarats</strong>*, Mike Lewis*. arXiv 2017. </p>
+          <a href="https://arxiv.org/pdf/1712.XXXX.pdf">[PDF]</a>
+          <a href="https://arxiv.org/abs/1712.XXXX">[arXiv]</a>
+          <br/>
+          <p>
+          End-to-end models for strategic dialogue are challenging to train, because linguistic and strategic aspects are entangled in latent state vectors. We introduce an approach to generating latent representations of dialogue moves, by inducing sentence representations to maximize the likelihood of subsequent sentences and actions. The effect is to decouple much of the semantics of the utterance from its linguistic realisation. We then use these latent sentence representations for hierarchical language generation, planning and reinforcement learning. Experiments show that using our message representations increases the reward achieved by the model, improves the effectiveness of long-term planning using rollouts, and allows self-play reinforcement learning to improve decision making without diverging from human language.
+          Our hierarchical model outperforms previous work both linguistically and strategically.
+          </p>
+        </div>
+      </div>
+      <div class="clr"></div>
     </div>
-  </div> </div>
 
-<div style="clear: both;"><!-- page div -->
+    <div class="pub-block">
+      <div class="pub-img">
+        <img title="Deal or No Deal? End-to-End Learning for Negotiation Dialogues" src="images/dealornodeal.png" />
+      </div>
+      <div class="pub-text">
+        <div class="paper" id="lewis2017dealornodeal">
+          <h3>Deal or No Deal? End-to-End Learning for Negotiation Dialogues.</h3>
+          <p>Mike Lewis, <strong>Denis Yarats</strong>, Yann Dauphin, Devi Parikh, Dhruv Batra. EMNLP 2017. </p>
+          <a href="https://arxiv.org/pdf/1706.05125.pdf">[PDF]</a>
+          <a href="https://arxiv.org/abs/1706.05125">[arXiv]</a>
+          <a href="https://github.com/facebookresearch/end-to-end-negotiator">[Code]</a>
+          <br/>
+          <p>
+          Much of human dialogue occurs in semi-cooperative settings, where agents with different goals attempt to agree on common decisions. Negotiations require complex communication and reasoning skills, but success is easy to measure, making this an interesting task for AI. We gather a large dataset of human-human negotiations on a multi-issue bargaining task, where agents who cannot observe each other's reward functions must reach an agreement (or a deal) via natural language dialogue. For the first time, we show it is possible to train end-to-end models for negotiation, which must learn both linguistic and reasoning skills with no annotated dialogue states. We also introduce dialogue rollouts, in which the model plans ahead by simulating possible complete continuations of the conversation, and find that this technique dramatically improves performance. Our code and dataset are publicly available.
+          </p>
+        </div>
+      </div>
+      <div class="clr"></div>
+    </div>
+    <div class="pub-block">
+      <div class="pub-img">
+        <img title="Convolutional Sequence to Sequence Learning" src="images/convs2s.png" />
+      </div>
+      <div class="pub-text">
+        <div class="paper" id="gehring2017convs2s">
+          <h3>Convolutional Sequence to Sequence Learning</h3>
+          <p>Jonas Gehring, Michael Auli, David Grangier, <strong>Denis Yarats</strong>, Yann Dauphin. ICML 2017. </p>
+          <a href="https://arxiv.org/abs/1705.03122.pdf">[PDF]</a>
+          <a href="https://arxiv.org/abs/1705.03122">[arXiv]</a>
+          <a href="https://github.com/facebookresearch/fairseq">[Code]</a>
+          <p>
+          The prevalent approach to sequence to sequence learning maps an input sequence to a variable length output sequence via recurrent neural networks. We introduce an architecture based entirely on convolutional neural networks. Compared to recurrent models, computations over all elements can be fully parallelized during training and optimization is easier since the number of non-linearities is fixed and independent of the input length. Our use of gated linear units eases gradient propagation and we equip each decoder layer with a separate attention module. We outperform the accuracy of the deep LSTM setup of Wu et al. (2016) on both WMT'14 English-German and WMT'14 English-French translation at an order of magnitude faster speed, both on GPU and CPU.
+          </p>
+        </div>
+      </div>
+      <div class="clr"></div>
+    </div>
+  </div>
+  <div class="clr"></div>
+</div>
 
-<!--
-<div class="section">
-<h2>About me</h2>
-  <div class="paper">
-      TODO
+<div class="clr"></div>
+
+<div class="block">
+  <div class="inner-block">
+    <h2>Talks</h2>
+    <div class="pub-block">
+      <div class="paper" id="">
+        <h3>Convolutional Sequence to Sequence Learning</h3>
+        <p>Treehouse Talk at CLMS, University of Washington.</p>
+        <a href="https://arxiv.org/abs/1705.03122.pdf">[Slides]</a>
+      </div>
+      <div class="clr"></div>
+    </div>
+    <div class="pub-block">
+      <div class="paper" id="">
+        <h3>Convolutional Sequence to Sequence Learning</h3>
+        <p>International Conference on Artificial Intelligence (<a href="http://www.aiukraine.com">www.aiukraine.com</a>).</p>
+        <a href="https://arxiv.org/abs/1705.03122.pdf">[Slides]</a>
+      </div>
+      <div class="clr"></div>
+    </div>
   </div>
 </div>
--->
-
-<div class="section">
-<h2>Research</h2>
-  <div class="paper">
-      My research interests lie at the intersection of Natural Language Processing (specifically sequence to sequence learning) and Reinforcement Learning.
-  </div>
-</div>
-
-
-<div class="section">
-<h2 id="reports">Publications</h2>
-
-<div class="paper" id="lewis2017dealornodeal">
-  <img class="paper" title="Deal or No Deal? End-to-End Learning for Negotiation Dialogues" src="images/dealornodeal.png" />
-  <div>
-    <a class="paper" href="https://arxiv.org/pdf/1706.05125.pdf">Deal or No Deal? End-to-End Learning for Negotiation Dialogues</a><br />
-    Mike Lewis, <strong>Denis Yarats</strong>, Yann Dauphin, Devi Parikh, Dhruv Batra <br />
-    Conference on Empirical Methods in Natural Language Processing (EMNLP), 2017 <br />
-    <a href="https://arxiv.org/abs/1706.05125">arXiv</a> /
-    <a href="https://github.com/facebookresearch/end-to-end-negotiator">pytorch code</a> /
-    <a shape="rect" href="javascript:togglebib('lewis2017dealornodeal')" class="togglebib">bibtex</a>
-    <pre xml:space="preserve">
-@article{lewis2017dealornodeal,
-  Author = {Lewis, Mike and Yarats, Denis and Dauphin, Yann N and
-            Parikh, Devi and Batra, Dhruv},
-  Title = {Deal or No Deal? End-to-End Learning for Negotiation Dialogues},
-  Booktitle = {Conference on Empirical Methods in
-               Natural Language Processing ({EMNLP})},
-  Year = {2017}
-}
-    </pre>
-  </div>
-  <div class="spanner"></div>
-</div>
-
-
-<div class="paper" id="gehring2017convs2s">
-  <img class="paper" title="Convolutional Sequence to Sequence Learning" src="images/convs2s.png" />
-  <div>
-    <a class="paper" href="https://arxiv.org/pdf/1705.03122.pdf">Convolutional Sequence to Sequence Learning</a><br />
-    Jonas Gehring, Michael Auli, David Grangier, <strong>Denis Yarats</strong>, Yann Dauphin <br />
-    International Conference on Machine Learning (ICML), 2017<br />
-    <a href="https://arxiv.org/abs/1705.03122">arXiv</a> /
-    <a href="https://github.com/facebookresearch/fairseq-py">pytorch code</a> /
-    <a href="https://github.com/facebookresearch/fairseq">torch code</a> /
-    <a shape="rect" href="javascript:togglebib('gehring2017convs2s')" class="togglebib">bibtex</a>
-    <pre xml:space="preserve">
-@article{gehring2017convs2s,
-  Author = {Gehring, Jonas, and Auli, Michael and Grangier, David and
-            Yarats, Denis and Dauphin, Yann N},
-  Title = {Convolutional Sequence to Sequence Learning},
-  Booktitle = {International Conference on Machine Learning ({ICML})},
-  Year = {2017}
-}
-    </pre>
-  </div>
-  <div class="spanner"></div>
-</div>
-
-</div>
-
-<!--
-<div class="section">
-<h2 id="reports">Talks</h2>
-  <div class="paper">
-
-  </div>
-</div>
--->
-
-<!--
-<div class="section">
-<h2 id="reports">Press Coverage</h2>
-  <div class="paper">
-      TODO
-  </div>
-</div>
--->
-
-
-
-
-</div><!-- close page div -->
-
-<div style="clear:both;">
-  <p align="right"><font size="2"><a href="http://jonbarron.info">I like this website</a></font></p><br />
-</div>
-
-<script xml:space="preserve" language="JavaScript">
-hideallbibs();
-hideallabs();
-</script>
 
 </body>
 
 </html>
-
