--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ rel="stylesheet" type="text/css" />
       <a href="https://scholar.google.com/citations?user=7kaXqgMAAAAJ&hl=en&pagesize=1000&sortby=pubdate" target="_blank">[Google Scholar]</a>
       <a href="https://github.com/1nadequacy" target="_blank">[GitHub]</a>
       <a href="data/denis_yarats_cv.pdf" target="_blank">[CV]</a>
-      [denisyarats at gmail com]
+      [denisyarats at gmail dot com]
     </p>
   </div>
   <div class="clr"></div>
@@ -184,8 +184,6 @@ rel="stylesheet" type="text/css" />
   <div class="clr"></div>
 </div>
 
-<div class="clr"></div>
-
 <div class="block">
   <div class="inner-block">
     <h2>Talks</h2>
@@ -193,7 +191,7 @@ rel="stylesheet" type="text/css" />
       <div class="paper" id="">
         <h3>Convolutional Sequence to Sequence Learning</h3>
         <p>Treehouse Talk at CLMS, University of Washington.</p>
-        <a href="https://arxiv.org/abs/1705.03122.pdf">[Slides]</a>
+        <a href="data/convs2s_uw.key" target="_blank">[Slides]</a>
       </div>
       <div class="clr"></div>
     </div>
@@ -201,11 +199,12 @@ rel="stylesheet" type="text/css" />
       <div class="paper" id="">
         <h3>Convolutional Sequence to Sequence Learning</h3>
         <p>International Conference on Artificial Intelligence (<a href="http://www.aiukraine.com">www.aiukraine.com</a>).</p>
-        <a href="https://arxiv.org/abs/1705.03122.pdf">[Slides]</a>
+        <a href="data/convs2s_uw.key" target="_blank">[Slides]</a>
       </div>
       <div class="clr"></div>
     </div>
   </div>
+  <div class="clr"></div>
 </div>
 
 </body>
