--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ rel="stylesheet" type="text/css" />
       </div>
       <div class="pub-text">
         <div class="paper" id="gehring2017convs2s">
-          <h3>Convolutional Sequence to Sequence Learning</h3>
+          <h3>Convolutional Sequence to Sequence Learning.</h3>
           <p>Jonas Gehring, Michael Auli, David Grangier, <strong>Denis Yarats</strong>, Yann Dauphin. ICML 2017. </p>
           <a href="https://arxiv.org/abs/1705.03122.pdf">[PDF]</a>
           <a href="https://arxiv.org/abs/1705.03122">[arXiv]</a>
@@ -189,7 +189,7 @@ rel="stylesheet" type="text/css" />
     <h2>Talks</h2>
     <div class="pub-block">
       <div class="paper" id="">
-        <h3>Convolutional Sequence to Sequence Learning</h3>
+        <h3>Convolutional Sequence to Sequence Learning.</h3>
         <p>Treehouse Talk at CLMS, University of Washington.</p>
         <a href="data/convs2s_uw.key" target="_blank">[Slides]</a>
       </div>
@@ -197,7 +197,7 @@ rel="stylesheet" type="text/css" />
     </div>
     <div class="pub-block">
       <div class="paper" id="">
-        <h3>Convolutional Sequence to Sequence Learning</h3>
+        <h3>Convolutional Sequence to Sequence Learning.</h3>
         <p>International Conference on Artificial Intelligence (<a href="http://www.aiukraine.com">www.aiukraine.com</a>).</p>
         <a href="data/convs2s_uw.key" target="_blank">[Slides]</a>
       </div>
