--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ rel="stylesheet" type="text/css" />
       <div class="pub-text">
         <div class="paper" id="yarats2017hiergen">
           <h3>Hierarchical Text Generation and Planning for Strategic Dialogue.</h3>
-          <p><strong>Denis Yarats</strong>*, Mike Lewis*. Preprint 2017. </p>
+          <p><strong>Denis Yarats</strong>*, Mike Lewis*. Preprint. </p>
           <a href="data/hierarchical_generation.pdf">[PDF]</a>
           <br/>
           <p>
