--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ rel="stylesheet" type="text/css" />
         <div class="paper" id="gehring2017convs2s">
           <h3>Convolutional Sequence to Sequence Learning.</h3>
           <p>Jonas Gehring, Michael Auli, David Grangier, <strong>Denis Yarats</strong>, Yann Dauphin. ICML 2017. </p>
-          <a href="https://arxiv.org/abs/1705.03122.pdf">[PDF]</a>
+          <a href="https://arxiv.org/pdf/1705.03122.pdf">[PDF]</a>
           <a href="https://arxiv.org/abs/1705.03122">[arXiv]</a>
           <a href="https://github.com/facebookresearch/fairseq">[Code]</a>
           <p>
