--- a/index.html
+++ b/index.html
@@ -189,6 +189,14 @@ rel="stylesheet" type="text/css" />
     <h2>Talks</h2>
     <div class="pub-block">
       <div class="paper" id="">
+        <h3>Task-Oriented Dialogue</h3>
+        <p>OSD Meetup, Minsk March 2018.</p>
+        <a href="data/task_oriented_dialogue.pdf" target="_blank">[Slides]</a>
+      </div>
+      <div class="clr"></div>
+    </div>
+    <div class="pub-block">
+      <div class="paper" id="">
         <h3>Convolutional Sequence to Sequence Learning.</h3>
         <p>Treehouse Talk at CLMS, University of Washington.</p>
         <a href="data/convs2s_uw.key" target="_blank">[Slides]</a>
