--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ I am a Research Engineer at <a href="https://research.fb.com/category/facebook-a
 <br>
 ICML 2018.
 <br>
-<a href="data/hierarchical_generation.pdf">[PDF]</a>
+<a href="https://arxiv.org/pdf/1712.05846.pdf">[PDF]</a>
 <a href="https://arxiv.org/abs/1712.05846">[arXiv]</a>
 <br>
 <br>
