--- a/index.html
+++ b/index.html
@@ -16,14 +16,27 @@ rel="stylesheet" type="text/css" />
 <h2>Denis Yarats</h2>
 <img title="Denis Yarats" style="width: 200px; height: auto;" src="images/photo.jpg" />
 <br>
-I am a Research Engineer at <a href="https://research.fb.com/category/facebook-ai-research-fair" target="_blank">Facebook AI Research (FAIR).</a>
+I am a PhD student at New York University working with <a href="http://cs.nyu.edu/~fergus/">Rob Fergus</a>.
+<br>
+My research interests broadly include reinforcement and deep learning.
 <br>
 <a href="https://scholar.google.com/citations?user=7kaXqgMAAAAJ&hl=en&pagesize=1000&sortby=pubdate" target="_blank">[Google Scholar]</a>
 <a href="https://github.com/1nadequacy" target="_blank">[GitHub]</a>
 <a href="data/denis_yarats_cv.pdf" target="_blank">[CV]</a>
-[denisyarats at gmail dot com]
+[denisyarats at cs dot nyu dot edu]
 <hr>
 <h3>Publications</h3>
+<strong>Quasi-hyperbolic momentum and Adam for deep learning.</strong>
+<br>
+Jerry Ma, <strong>Denis Yarats</strong>.
+<br>
+ICLR 2019.
+<br>
+<a href="https://arxiv.org/pdf/1810.06801.pdf">[PDF]</a>
+<a href="https://arxiv.org/abs/1810.06801">[arXiv]</a>
+<br>
+<br>
+
 <strong>Hierarchical Text Generation and Planning for Strategic Dialogue.</strong>
 <br>
 <strong>Denis Yarats</strong>, Mike Lewis.
