--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ rel="stylesheet" type="text/css" />
 <h2>Denis Yarats</h2>
 <img title="Denis Yarats" style="width: 200px; height: auto;" src="images/photo.jpg" />
 <br>
-I am a PhD student at New York University working with <a href="http://cs.nyu.edu/~fergus/">Rob Fergus</a>.
+I am a PhD student at New York University and FAIR working with <a href="http://cs.nyu.edu/~fergus/">Rob Fergus</a>.
 <br>
-My research interests broadly include reinforcement and deep learning.
+My research interests broadly include Reinforcement Learning, Optimal Control, and Robotics.
 <br>
 <a href="https://scholar.google.com/citations?user=7kaXqgMAAAAJ&hl=en&pagesize=1000&sortby=pubdate" target="_blank">[Google Scholar]</a>
 <a href="https://github.com/1nadequacy" target="_blank">[GitHub]</a>
@@ -26,6 +26,59 @@ My research interests broadly include reinforcement and deep learning.
 [denisyarats at cs dot nyu dot edu]
 <hr>
 <h3>Publications</h3>
+
+<strong>Improving Sample Efficiency in Model-Free Reinforcement Learning from Images.</strong>
+<br>
+<strong>Denis Yarats</strong>, Amy Zhang, Ilya Kostrikov, Brandon Amos, Joelle Pineau, Rob Fergus.
+<br>
+Submitted to ICLR 2020.
+<br>
+<a href="https://arxiv.org/pdf/1910.01741.pdf">[PDF]</a>
+<a href="https://arxiv.org/abs/1910.01741">[arXiv]</a>
+<a href="https://sites.google.com/view/sac-ae/home">[Website]</a>
+<br>
+<br>
+
+<strong>The Differentiable Cross-Entropy Method.</strong>
+<br>
+Brandon Amos, <strong>Denis Yarats</strong>.
+<br>
+Submitted to ICLR 2020.
+<br>
+<a href="https://arxiv.org/pdf/1909.12830.pdf">[PDF]</a>
+<a href="https://arxiv.org/abs/1909.12830">[arXiv]</a>
+<a href="https://sites.google.com/view/diff-cross-entropy-method">[Website]</a>
+<br>
+<br>
+
+<strong>Generalized Inner Loop Meta-Learning.</strong>
+<br>
+Edward Grefenstette, Brandon Amos, <strong>Denis Yarats</strong>, Phu Mon Htut, Artem Molchanov, Franziska Meier, Douwe Kiela, Kyunghyun Cho, Soumith Chintala.
+<br>
+Submitted to ICLR 2020.
+<br>
+<a href="https://arxiv.org/pdf/1910.01727.pdf">[PDF]</a>
+<a href="https://arxiv.org/abs/1910.01727">[arXiv]</a>
+<a href="https://github.com/facebookresearch/higher">[Code]</a>
+<a href="https://higher.readthedocs.io/en/latest/">[Website]</a>
+<br>
+<br>
+
+
+<strong>Hierarchical Decision Making by Generating and Following Natural Language Instructions.</strong>
+<br>
+Hengyuan Hu*, <strong>Denis Yarats*</strong>, Qucheng Gong, Yuandong Tian, Mike Lewis.
+<br>
+NeurIPS 2019.
+<br>
+<a href="https://arxiv.org/pdf/1906.00744.pdf">[PDF]</a>
+<a href="https://arxiv.org/abs/1906.00744">[arXiv]</a>
+<a href="https://github.com/facebookresearch/minirts">[Code]</a>
+<a href="https://www.minirts.net/">[Website]</a>
+<a href="https://ai.facebook.com/blog/-teaching-ai-to-plan-using-language-in-a-new-open-source-strategy-game/">[Blog]</a>
+<br>
+<br>
+
 <strong>Quasi-hyperbolic momentum and Adam for deep learning.</strong>
 <br>
 Jerry Ma, <strong>Denis Yarats</strong>.
@@ -34,6 +87,8 @@ ICLR 2019.
 <br>
 <a href="https://arxiv.org/pdf/1810.06801.pdf">[PDF]</a>
 <a href="https://arxiv.org/abs/1810.06801">[arXiv]</a>
+<a href="https://github.com/facebookresearch/qhoptim">[Code]</a>
+<a href="https://facebookresearch.github.io/qhoptim/">[Website]</a>
 <br>
 <br>
 
@@ -45,12 +100,13 @@ ICML 2018.
 <br>
 <a href="https://arxiv.org/pdf/1712.05846.pdf">[PDF]</a>
 <a href="https://arxiv.org/abs/1712.05846">[arXiv]</a>
+<a href="https://github.com/facebookresearch/end-to-end-negotiator">[Code]</a>
 <br>
 <br>
 
 <strong>Deal or No Deal? End-to-End Learning for Negotiation Dialogues.</strong>
 <br>
-Mike Lewis, <strong>Denis Yarats</strong>, Yann Dauphin, Devi Parikh, Dhruv Batra. 
+Mike Lewis, <strong>Denis Yarats</strong>, Yann Dauphin, Devi Parikh, Dhruv Batra.
 <br>
 EMNLP 2017.
 <br>
@@ -62,7 +118,7 @@ EMNLP 2017.
 
 <strong>Convolutional Sequence to Sequence Learning.</strong>
 <br>
-Jonas Gehring, Michael Auli, David Grangier, <strong>Denis Yarats</strong>, Yann Dauphin. 
+Jonas Gehring, Michael Auli, David Grangier, <strong>Denis Yarats</strong>, Yann Dauphin.
 <br>
 ICML 2017.
 <br>
@@ -72,30 +128,7 @@ ICML 2017.
 <br>
 <br>
 
-<h3>Talks</h3>
-<strong>Task-Oriented Dialogue.</strong>
-<br>
-OSD Meetup, Minsk March 2018.
-<br>
-<a href="data/task_oriented_dialogue.pdf" target="_blank">[Slides]</a>
-<br>
-<br>
 
-<strong>Convolutional Sequence to Sequence Learning.</strong>
-<br>
-Treehouse Talk at CLMS, University of Washington.
-<br>
-<a href="data/convs2s_uw.key" target="_blank">[Slides]</a>
-<br>
-<br>
-
-<strong>Convolutional Sequence to Sequence Learning.</strong>
-<br>
-International Conference on Artificial Intelligence (<a href="http://www.aiukraine.com">www.aiukraine.com</a>).
-<br>
-<a href="data/convs2s_uw.key" target="_blank">[Slides]</a>
-<br>
-<br>
 
 
 </body>
