--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@ Submitted to ICLR 2020.
 
 <strong>Generalized Inner Loop Meta-Learning.</strong>
 <br>
-Edward Grefenstette, Brandon Amos, <strong>Denis Yarats</strong>, Phu Mon Htut, Artem Molchanov, Franziska Meier, Douwe Kiela, Kyunghyun Cho, Soumith Chintala.
+Edward Grefenstette, Brandon Amos, <strong>Denis Yarats</strong>, Phu Mon Htut, Artem Molchanov
+<br>
+Franziska Meier, Douwe Kiela, Kyunghyun Cho, Soumith Chintala.
 <br>
 Submitted to ICLR 2020.
 <br>
