--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@ My research interests broadly include Reinforcement Learning, Optimal Control, a
 <hr>
 <h3>Publications</h3>
 
+<strong>On the adequacy of untuned warmup for adaptive optimization.</strong>
+<br>
+Jerry Ma, <strong>Denis Yarats</strong>.
+<br>
+Submitted to AISTATS 2020.
+<br>
+<a href="https://arxiv.org/pdf/1910.04209.pdf">[PDF]</a>
+<a href="https://arxiv.org/abs/1910.04209">[arXiv]</a>
+<br>
+<br>
+
 <strong>Improving Sample Efficiency in Model-Free Reinforcement Learning from Images.</strong>
 <br>
 <strong>Denis Yarats</strong>, Amy Zhang, Ilya Kostrikov, Brandon Amos, Joelle Pineau, Rob Fergus.
