--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ Submitted to ICLR 2020.
 <br>
 <a href="https://arxiv.org/pdf/1910.01741.pdf">[PDF]</a>
 <a href="https://arxiv.org/abs/1910.01741">[arXiv]</a>
+<a href="https://github.com/1nadequacy/pytorch_sac_ae">[Code]</a>
 <a href="https://sites.google.com/view/sac-ae/home">[Website]</a>
 <br>
 <br>
