--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ I am a PhD student at New York University and FAIR working with <a href="http://
 My research interests broadly include Reinforcement Learning, Optimal Control, and Robotics.
 <br>
 <a href="https://scholar.google.com/citations?user=7kaXqgMAAAAJ&hl=en&pagesize=1000&sortby=pubdate" target="_blank">[Google Scholar]</a>
-<a href="https://github.com/1nadequacy" target="_blank">[GitHub]</a>
+<a href="https://github.com/denisyarats" target="_blank">[GitHub]</a>
 <a href="data/denis_yarats_cv.pdf" target="_blank">[CV]</a>
 [denisyarats at cs dot nyu dot edu]
 <hr>
